--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-next": "^14.0.4",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
+    "@tailwindcss/typography": "^0.5.10",
     "typescript": "^5.3.3",
     "@next/bundle-analyzer": "^14.0.4",
     "cross-env": "^7.0.3"
